# embedded-msgpack

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  justfile  rustfmt.toml
.cargo/: config.toml
fuzz/: Cargo.toml
src/: decode.rs  encode.rs  lib.rs  marker.rs  rustfmt.toml
src/decode/: mod.rs
src/decode/serde/: enum_.rs  map.rs  mod.rs  seq.rs
src/encode/: mod.rs  serde.rs
src/encode/serde/: map.rs  mod.rs  seq.rs  struct_.rs
src/ext/: mod.rs  timestamp.rs
tests/: lib.rs
tests/decode/: mod.rs
tests/encode/: mod.rs
tests/fuzzing/: mod.rs
tests/interop/: mod.rs
tests/roundtrip/: mod.rs
