[package]
name = "embedded-msgpack"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Karsten Große"]
edition = "2018"

[dependencies]
num-traits = { version = "~0.2", default-features = false }
byteorder = { version = "~1", default-features = false }
zerocopy = { version = "~0.3", default-features = false }
serde = { version = "~1", default-features = false, optional = true, features = ["derive"] }
serde_bytes = { version = "*", default-features = false, optional = true }
serde_repr = { version = "*", default-features = false, optional = true }
paste = "*"

panic-halt = { version = "*", optional = true }
cortex-m = { version = "*", optional = true }
cortex-m-rt = { version = "*", optional = true }
rand = { version = "*", optional = true, default-features = false }
alloc-cortex-m = { version = "*", optional = true }

[features]
default = [
    "panic-halt",
    "cortex-m",
    "cortex-m-rt",
    "rand",
    "u64",
    "i64",
    "timestamp",
    "serde",
    "ext8", # "ext16",    # "ext32",
]
std = ["byteorder/std", "num-traits/std", "serde_bytes/std", "serde/std"]
alloc = ["serde/alloc", "serde_bytes/alloc"]
u64 = []
i64 = []
bin32 = []
map32 = []
array16 = []
array32 = ["array16"]
str16 = []
str32 = ["str16"]
ext = []
fixext = ["ext"]
ext8 = ["ext"]
ext16 = ["ext"]
ext32 = ["ext"]
timestamp = ["ext"]
timestamp96 = ["timestamp", "ext8"]
compliant = [
    "i64",
    "u64",
    "bin32",
    "map32",
    "array32",
    "str32",
    "ext",
    "fixext",
    "ext8",
    "ext16",
    "ext32",
    "timestamp",
    "timestamp96",
]


[profile.release]
# codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 'z' # Optimize for size.
